# mywork

button_call/: button.py  button_call.py  button_run.py  button_run.spec
button_call/buton_call/: buton_call.ino
button_call/button_setup/: button_setup.ino
detect_pallet/Object-Detection-Tutorial-master/: Untitled.ipynb  plots.ipynb
detect_pallet/machine_learning/traning_data/anotation/: pallet1.xml  pallet10.xml  pallet11.xml  pallet12.xml  pallet13.xml  pallet14.xml  pallet15.xml  pallet16.xml  pallet17.xml  pallet18.xml  pallet19.xml  pallet2.xml  pallet20.xml  pallet3.xml  pallet4.xml  pallet5.xml  pallet6.xml  pallet7.xml  pallet8.xml  pallet9.xml
detect_pallet/watershed/: box_detect.py
robot/charger/: key_press_server.py  test_server.py  test_server_1.py
robot/charger/AGV_STM32_Charge_Station - Dong Ho/: .cproject  .mxproject  .project  Charge_Station.elf.launch  Charge_Station.ioc  Charge_Station.txt  main.c
robot/charger/AGV_STM32_Charge_Station - Dong Ho/Inc/: main.h
robot/charger/AGV_STM32_Charge_Station - Dong Ho/MDK-ARM/: Charge_Station.uvoptx  Charge_Station.uvprojx  startup_stm32f103xe.lst
robot/charger/AGV_STM32_Charge_Station - Dong Ho/Src/: .cproject  stm32f1xx_hal_msp.c  stm32f1xx_it.c
robot/full_code/: SELDAT_ROBOT_UNI.rar
robot/full_code/SELDAT_ROBOT_UNI/: cmd_cmod_sick.sh  cmd_sync.sh  run.sh~  run_gmapping.sh  run_gui.sh  run_gui.sh~  run_navigation.sh  run_navigation_norviz.sh  run_robot.sh  run_robot.sh~  run_robot_old.sh  run_scan_map.sh  run_scan_map_norviz.sh  runnode.sh  rviz.sh  start_server.sh
robot/full_code/SELDAT_ROBOT_UNI/devel/: .catkin  .rosinstall  setup.sh
robot/full_code/seldat_robot/: cmd_cmod_sick.sh  cmd_test_lms.sh  cmd_vel.sh  run_navigation.sh  run_navigation_norviz.sh  run_scan_map.sh  run_scan_map_norviz.sh  rviz.sh  start_robot.sh
robot/full_code/seldat_robot/devel/: .catkin  .rosinstall  setup.sh
robot/full_code/seldat_robot/src/seldat_robot/: CMakeLists.txt  CMakeLists.txt~
robot/full_code/seldat_robot/src/seldat_robot/launch/: amcl.launch  bringup.launch  gmapping.launch  mapping.launch  navigation.launch  navigation_2.launch  navigation_norviz.launch  pose_ekf.launch  slam_2_nov01_2.launch  slam_2_nov01_2_norviz.launch
robot/full_code/seldat_robot/src/seldat_robot/maps/: robot.pgm.bk  robot.yaml  robot.yaml.bk  robot1.pgm  robot_new.pgm
robot/full_code/seldat_robot/src/seldat_robot/param/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params.yaml~  move_base_params.yaml
robot/full_code/seldat_robot/src/seldat_robot/rviz/: robot.rviz
robot/full_code/seldat_robot/src/seldat_robot/src/: PID_Compute_2.py  PID_Compute_2.py~  PeripheralManager.cpp  SelfDriving.cpp  SelfDriving.cpp~  SelfDriving_1Line.cpp  SelfDriving_no_pallet.cpp  SelfDriving_no_pallet.cpp~  SelfDriving_no_pallet_1Line.cpp  StreamData.cpp  bridgeNode.cpp  bridgeNodeChargerCtrl.cpp  bridgeNodeCtrl.cpp  bridgeNode_old.cpp  info_display.py  internet_check.py  key_press.py  line_to_cmd_vel.py~  magnetic_guidance.py  magnetic_guidance_P2_server.py  magnetic_guidance_old.py  magnetic_guidance_old_ver2.py  magnetic_guide.py  odom.py  odom2.py  odom_encoder.py  robot_node_stm_new.py  safety_rule.cpp  safety_rule.cpp~  safety_v2.cpp  safety_v2.cpp~  teleop_due.py  tpid_velocity.py  tpid_velocity.py~  twist_to_motor.cpp  twist_to_motor.cpp~  zone_checker.py
robot/full_code/seldat_robot/src/seldat_robot/urdf/: robot_seldat_v3.urdf  robot_seldat_v3.xacro  robot_seldat_xacro_2.urdf.sv
robot/line_guidance/: package.xml
robot/line_guidance/src/: .ICEauthority  .PID_Compute_2.py.swp  charger_control.py  key_press.py  listener.py  magnetic_guidance(17-2-encoder).py  magnetic_guidance.py  magnetic_guidance_11-2-2019(old).py  magnetic_guidance_12-3.py  magnetic_guidance_15-3.py  magnetic_guidance_16-3.py  magnetic_guidance_170319.py  magnetic_guidance_220319.py  magnetic_guidance_230319.py  magnetic_guidance_270319.py  magnetic_guidance_30-1-2019.py  magnetic_guidance_P1.py  magnetic_guidance_P1_new(notuse).py  magnetic_guidance_P1_old.py  magnetic_guidance_P2.py  magnetic_guidance_P2_server.py  magnetic_guidance_P2_server_1.py  magnetic_guidance_P2_server_old.py  magnetic_guidance_P2_server_old_1.py  magnetic_guidance_P2_server_old_2.py  magnetic_guidance_P3_server.py  magnetic_guidance_bk(17h)100419.py  magnetic_guidance_bk_100419.py  magnetic_guidance_bk_12-3.py  magnetic_guidance_bk_290319.py  magnetic_guidance_encoder.py  magnetic_guidance_log.py  magnetic_guidance_new100419.py  magnetic_guidance_old.py  magnetic_guidance_old_U.py  magnetic_guidance_old_ver3.py  magnetic_guidance_rb2.py  new_magnetic_guidance.py  robot_node_stm.py  talker.py  (+5 more)
robot/line_guidance/src/log_line/: log.txt
robot/line_guidance/src/old_version/: 22-3-2018-magnetic.py  magnetic_guidance_1.py
robot/line_guidance/src/unilever_code/: magnetic_guidance_P1.py  magnetic_guidance_P1_old.py  magnetic_guidance_P1_old_2.py
robot/line_guidance/src/unilever_code_new_robot/: magnetic_guidance(16-2-8h).py  magnetic_guidance(18-2-16h).py  magnetic_guidance15-2(10h).py  magnetic_guidance_11-2-2019(new).py  magnetic_guidance_12-2-2019(12h).py  magnetic_guidance_12-2-2019(15h).py  magnetic_guidance_12-2-2019(16h).py  magnetic_guidance_14-2(18h30).py  magnetic_guidance_14-2-2019.py  magnetic_guidance_14_2_12h.py  magnetic_guidance_18-2(12h).py  magnetic_guidance_18-2(8h).py  magnetic_guidance_19-2(12h).py  magnetic_guidance_19-2(13h).py  magnetic_guidance_19-2(22h).py  magnetic_guidance_21-2(14h).py  magnetic_guidance_21-2(16h_good_perfor).py  magnetic_guidance_21-2(19h_good_perfor).py  magnetic_guidance_21-2(7h).py  magnetic_guidance_22-2(robot#3).py  magnetic_guidance_23-2(8h).py  magnetic_guidance_28-2(turn_dir_2).py  magnetic_guidance_30-1-2019.py  magnetic_guidance__24-2(8h).py  magnetic_guidance__27-2(18h).py
robot/line_guidance_old/: CMakeLists.txt
robot/line_guidance_old/src/: magnetic_guidance.py  magnetic_guidance_old.py
(+157 files in other folders)
